ThreadSanitizer: data race [@ NullifyConsumeBodyPump] vs. [@ operator]
Categories
(Core :: DOM: Workers, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox87 | --- | fixed |
People
(Reporter: jkratzer, Assigned: edenchuang)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 20210202-57bcdf857d44.
For detailed crash information, see attachment.
General information about TSan reports
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
Comment 1•5 years ago
•
|
||
This is racing on the value of mShuttingDown, although weirdly in this case both threads are setting it to true? So pretty benign but potentially an indication that something more scary could be happening.
Naive fix is to just make mShuttingDown atomic.
Permalink to problematic lines:
vs
Comment 2•5 years ago
|
||
It seems to me that the callback in BodyConsumer::Create should rather dispatch its action to the worker's owning thread. There are other callbacks that already dispatch to a different thread, such as https://searchfox.org/mozilla-central/rev/927e525f481a93a8f63d27a78ae6201e42b1b1fb/dom/workers/ScriptLoader.cpp#2331-2335.
Comment 4•5 years ago
|
||
Oh it occurs to me that Bug 1686156 is probably strongly related to this one.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
Comment 8•5 years ago
|
||
| bugherder | ||
Description
•