Bug 1690370 - Remove race condition on BodyConsumer::mShuttingDown r=dom-worker-reviewers,sg

According to [[ https://searchfox.org/mozilla-central/rev/7067bbd8194f4346ec59d77c33cd88f06763e090/dom/base/BodyConsumer.h#132 | the comment on BodyConsumer::mShuttingDown declaration]], it is designed to be accessed on the main thread only. However, the [[ https://searchfox.org/mozilla-central/rev/7067bbd8194f4346ec59d77c33cd88f06763e090/dom/base/BodyConsumer.cpp#299-304 | callback of StrongWorkerRef::Create in BodyConsumer::Create ]] could access BodyConsumer::mShuttingDown on any thread.

The patch removes the direct accessing the mShuttingDown in the callback since calling BodyConsumer::ShutDownMainThreadConsuming() will set mShuttingDown as true.

Differential Revision: https://phabricator.services.mozilla.com/D104528